Bug 119234 - Window views not updated when tag name changed in "Tag Filters"
Summary: Window views not updated when tag name changed in "Tag Filters"
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Tags-Engine (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-12-30 12:48 UTC by Michal Kolodziejczyk
Modified: 2017-07-12 04:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michal Kolodziejczyk 2005-12-30 12:48:51 UTC
Version:           0.8 (using KDE KDE 3.5.0)
Installed from:    Unspecified Linux
OS:                Linux

When I change the name of the tag in right-side window ("Tag Filters"), by right-clicking -> Edit Tag Properties, then the new name is not updated in middle (thumbnails) ane left ("My Tags") windows. This operation works OK when right-clicking in the left-side window ("My Tags"), so I guess the left and middle windows (views) are not refreshed after editing tags properties from the right-side window.
Comment 1 Marcel Wiesweg 2006-04-05 14:29:59 UTC
SVN commit 526683 by mwiesweg:

Connect to signalAlbumRenamed in TagFolderView, 
tag renaming can be done by right sidebar as well.
For me it is nicely refreshed in the thumbnail view,
so I assume this is already fixed.

BUG: 119234


 M  +19 -1     tagfolderview.cpp  
 M  +1 -0      tagfolderview.h  


--- trunk/extragear/graphics/digikam/digikam/tagfolderview.cpp #526682:526683
@@ -158,11 +158,13 @@
             SLOT(slotAlbumAdded(Album*)));
     connect(d->albumMan, SIGNAL(signalAlbumDeleted(Album*)),
             SLOT(slotAlbumDeleted(Album*)));
+    connect(d->albumMan, SIGNAL(signalAlbumRenamed(Album*)),
+            SLOT(slotAlbumRenamed(Album*)));
     connect(d->albumMan, SIGNAL(signalAlbumsCleared()),
             SLOT(slotAlbumsCleared()));
     connect(d->albumMan, SIGNAL(signalAlbumIconChanged(Album*)),
             this, SLOT(slotAlbumIconChanged(Album*)));
-    connect(AlbumManager::instance(), SIGNAL(signalTAlbumMoved(TAlbum*, TAlbum*)),
+    connect(d->albumMan, SIGNAL(signalTAlbumMoved(TAlbum*, TAlbum*)),
             SLOT(slotAlbumMoved(TAlbum*, TAlbum*)));
 
     connect(this, SIGNAL(selectionChanged()),
@@ -262,6 +264,22 @@
         insertItem(item);
 }
 
+void TagFolderView::slotAlbumRenamed(Album* album)
+{
+    if (!album)
+        return;
+
+    TAlbum* tag = dynamic_cast<TAlbum*>(album);
+    if (!tag)
+        return;
+
+    TagFolderViewItem* item = (TagFolderViewItem*)(tag->extraData(this));
+    if (item)
+    {
+        item->setText(0, tag->title());
+    }
+}
+
 void TagFolderView::slotSelectionChanged()
 {
     if (!active())
--- trunk/extragear/graphics/digikam/digikam/tagfolderview.h #526682:526683
@@ -66,6 +66,7 @@
     void slotAlbumAdded(Album *);
     void slotSelectionChanged();
     void slotAlbumDeleted(Album*);
+    void slotAlbumRenamed(Album*);
     void slotAlbumsCleared();
     void slotAlbumIconChanged(Album* album);
     void slotAlbumMoved(TAlbum* tag, TAlbum* newParent);