Connect to signalAlbumRenamed in TagFolderView, tag renaming can be done by right sidebar as well. For me it is nicely refreshed in the thumbnail view, so I assume this is already fixed.

BUG: 119234

svn path=/trunk/extragear/graphics/digikam/; revision=526683